--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
-   android:columnCount="2"
+   android:columnCount="4"
    android:useDefaultMargins="true">
 
    <EditText
@@ -21,7 +21,7 @@
       android:digits="0123456789"
       android:maxLength="6"
       android:ems="10"
-      android:layout_columnSpan="2"/>
+      android:layout_columnSpan="3"/>
 
    <TextView
       android:layout_width="wrap_content"
@@ -30,16 +30,29 @@
       android:id="@+id/amountTextView"
       android:layout_row="0"
       android:layout_column="0"
-      android:layout_columnSpan="2"
+      android:layout_columnSpan="3"
       android:hint="@string/enter_amount"
       android:layout_gravity="fill_horizontal"
       android:background="@color/amount_background"
       android:padding="@dimen/textview_padding"
       android:elevation="@dimen/elevation"/>
 
+
+      <Button
+          android:id="@+id/calcAmount"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_row="0"
+          android:layout_column="3"
+          android:layout_columnSpan="1"
+          android:text="Calc" />
+
    <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_row="1"
+      android:layout_column="0"
+      android:layout_columnSpan="1"
       android:textAppearance="?android:attr/textAppearanceMedium"
       android:text="@string/rate_percentage"
       android:id="@+id/rateTextView"
@@ -50,13 +63,19 @@
       android:layout_height="@dimen/seekbar_height"
       android:id="@+id/rateSeekBar"
       android:indeterminate="false"
-      android:max="30"
-      android:progress="15"
+      android:layout_row="1"
+      android:layout_column="1"
+      android:layout_columnSpan="3"
+      android:max="5"
+      android:progress="1"
       android:layout_gravity="fill_horizontal"/>
 
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
+       android:layout_row="2"
+       android:layout_column="0"
+       android:layout_columnSpan="1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/years"
        android:id="@+id/yearsTextView"
@@ -67,6 +86,8 @@
        android:layout_height="@dimen/seekbar_height"
        android:id="@+id/yearsSeekBar"
        android:indeterminate="false"
+       android:layout_column="1"
+       android:layout_columnSpan="3"
        android:max="30"
        android:progress="15"
        android:layout_gravity="fill_horizontal"/>
@@ -74,6 +95,9 @@
    <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_row="3"
+      android:layout_column="0"
+      android:layout_columnSpan="1"
       android:textAppearance="?android:attr/textAppearanceMedium"
       android:text="@string/monthly"
       android:id="@+id/totalLabelTextView"
@@ -82,6 +106,8 @@
    <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_column="1"
+      android:layout_columnSpan="3"
       android:textAppearance="?android:attr/textAppearanceMedium"
       android:id="@+id/monthlyTextView"
       android:layout_gravity="fill_horizontal"
